add pangram algorithm